@@ -9,9 +9,9 @@ package com.hedera.services.bdd.suites.file;
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -21,6 +21,7 @@ package com.hedera.services.bdd.suites.file;
  */
 
 import com.hedera.services.bdd.spec.HapiApiSpec;
+import com.hedera.services.bdd.spec.HapiSpecSetup;
 import com.hedera.services.bdd.spec.keys.KeyShape;
 import com.hedera.services.bdd.spec.keys.SigControl;
 import com.hedera.services.bdd.spec.transactions.TxnUtils;
@@ -30,7 +31,6 @@ import com.hederahashgraph.api.proto.java.Transaction;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.hedera.services.bdd.spec.HapiApiSpec.defaultHapiSpec;
@@ -43,6 +43,7 @@ import static com.hedera.services.bdd.spec.keys.SigControl.OFF;
 import static com.hedera.services.bdd.spec.keys.SigControl.ON;
 import static com.hedera.services.bdd.spec.queries.QueryVerbs.getFileInfo;
 import static com.hedera.services.bdd.spec.transactions.TxnVerbs.fileCreate;
+import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.AUTORENEW_DURATION_NOT_IN_RANGE;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_NODE_ACCOUNT;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_SIGNATURE;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_ZERO_BYTE_IN_STRING;
@@ -50,29 +51,30 @@ import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.INVALID_ZERO_B
 public class FileCreateSuite extends HapiApiSuite {
 	private static final Logger log = LogManager.getLogger(FileCreateSuite.class);
 
+	private static final long defaultMaxLifetime =
+			Long.parseLong(HapiSpecSetup.getDefaultNodeProps().get("entities.maxLifetime"));
+
 	public static void main(String... args) {
 		new FileCreateSuite().runSuiteSync();
 	}
 
 	@Override
 	protected List<HapiApiSpec> getSpecsInSuite() {
-		return allOf(
-				positiveTests(),
-				negativeTests()
-		);
-	}
-
-	private List<HapiApiSpec> positiveTests() {
-		return Arrays.asList(
-				createWithMemoWorks()
-		);
-	}
-
-	private List<HapiApiSpec> negativeTests() {
-		return Arrays.asList(
+		return List.of(new HapiApiSpec[] {
+				createWithMemoWorks(),
 				createFailsWithMissingSigs(),
-				createFailsWithPayerAccountNotFound()
-		);
+				createFailsWithPayerAccountNotFound(),
+				createFailsWithExcessiveLifetime(),
+		});
+	}
+
+	private HapiApiSpec createFailsWithExcessiveLifetime() {
+		return defaultHapiSpec("CreateFailsWithExcessiveLifetime")
+				.given().when().then(
+						fileCreate("test")
+								.lifetime(defaultMaxLifetime + 12_345L)
+								.hasPrecheck(AUTORENEW_DURATION_NOT_IN_RANGE)
+				);
 	}
 
 	private HapiApiSpec createWithMemoWorks() {
@@ -116,7 +118,7 @@ public class FileCreateSuite extends HapiApiSuite {
 		SigControl validSig = shape.signedWith(sigs(ON, sigs(ON, ON, OFF), sigs(OFF, OFF, ON)));
 
 		return defaultHapiSpec("CreateFailsWithPayerAccountNotFound")
-				.given( ).when( ).then(
+				.given().when().then(
 						fileCreate("test")
 								.withLegacyProtoStructure()
 								.waclShape(shape)
@@ -125,6 +127,7 @@ public class FileCreateSuite extends HapiApiSuite {
 								.hasPrecheckFrom(INVALID_NODE_ACCOUNT)
 				);
 	}
+
 	@Override
 	protected Logger getResultsLogger() {
 		return log;
